--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+gradle.properties
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
