--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'pl.mikigal'
-version '1.2.5'
+version '1.2.6'
 
 publishing {
     repositories {
@@ -44,4 +44,8 @@ jar {
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
+}
+
+tasks.withType(Jar) {
+    destinationDir = file("C:\\Users\\mikigal\\Desktop\\test\\plugins")
 }
